[metadata]
name = treepuncher
version = 0.2.1
author = alemi
author_email = me@alemi.dev
description = An hackable Minecraft client, built with aiocraft
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alemidev/treepuncher
project_urls =
    Bug Tracker = https://github.com/alemidev/treepuncher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    setproctitle
    termcolor
    apscheduler
    aioconsole
    aiocraft
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
